@@ -108,7 +108,6 @@ DMGFILE="${BUILD_DIR}/${NAME}.dmg"
 PROJECT="${TOP_DIR}/${NAME}.pro"
 PKG_DMG="${TOP_DIR}/pkg-dmg"
 
-NXPROXY="$(which nxproxy)"
 # Try to find the MacPorts prefix.
 typeset MACPORTS_PREFIX_SEARCH=""
 if type -P port >/dev/null 2>&1; then
@@ -119,6 +118,8 @@ else
 	# Try to guess.
 	MACPORTS_PREFIX_SEARCH="/opt/local/"
 fi
+
+NXPROXY="nxproxy"
 
 : ${SDK:="/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk"}
 : ${MACOSX_DEPLOYMENT_TARGET:="10.7"}
@@ -148,6 +149,11 @@ else
 	echo "Unable to determine OS X version. Unknown value '${SDK_MINOR_VERSION}'." >&2
 	exit 1
 fi
+
+# Gather files.
+NXPROXY="$(lazy_canonical_path "${MACPORTS_PREFIX}/bin/${NXPROXY}")"
+
+[ -x "${NXPROXY}" ] || dependency_error "nxproxy" "nxproxy" "binary"
 
 set -e
 
