@@ -71,6 +71,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - macbuild.sh: add new lazy_canonical_path() helper function.
     - macbuild.sh: add new get_nesting_level() helper function.
     - macbuild.sh: add new repeat_str() helper function.
+    - macbuild.sh: refactor nxproxy detection to use MACPORTS_PREFIX.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
